	* Added the tagetPage ID property to the TypoScript constants
	* Added the query GET parameter to constants
	* Added feature #36202: Add option to set domains to be searched, credits Stefan Sprenger
	* Removed title field from result highlighting fields
	* Added OpenSearch support
	* Fixed broken show results of empty query, credits Stefan Galinski

2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Fix issue #35339: Index Queue error

2012-06-15  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a bug in status report configuration check that crashed the status report when a site was not configred correctly

2012-06-13  Ingo Renner  <ingo.renner@dkd.de>

	* Added an option to define the sorting field in SOLR_RELATION mm tables

2012-06-06  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Fix dist path in multi Solr install script

2012-05-09  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Add install script for multiple Solr versions

2012-04-23  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a bug that caused the the magic __solr_index_language record field to be empty for the default language when indexing records
	* Fixed an issue that caused URLs for records to be generated without realurl

2012-04-03  Ingo Renner  <ingo.renner@dkd.de>

	* Added feature #35548: Priorities for different indexing configurations

2012-03-28  Ingo Renner  <ingo.renner@dkd.de>

	* Release of v2.1.0

	* Fixed bug #35031: Duplicate index entries if records are moved to another PID
	* Added an option to add arbitrary headers to Index Queue page indexer request
	* Added a report to check for allow_url_fopen to be enabled
	* Added a report to detect PHP versions with buggy filter_var() function
	* Removed storing the cHash in the index, dynamic pages are not indexed anyway
	* Fixed bug #25911: Exception in Draft Workspace when editing content, credits Michael Voehringer
	* Added example Index Queue configuration for EXT:news
	* Added logging of detected fe access groups