@@ -16,6 +16,7 @@
 	* Removed title field from result highlighting fields
 	* Added OpenSearch support
 	* Fixed broken show results of empty query, credits Stefan Galinski
+	* Fixed bug #35996: Page Indexer always stores absolute url
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
